<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="you">You</string>
    <string name="computer">Computer</string>
    <string name="win_message">%1$s</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="game_history">Game history</string>
</resources>
