<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/tvRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/tvWinLoseMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRules"
        app:layout_constraintVertical_bias="0.148" />

    <ImageView
        android:id="@+id/ivPlayerChoiche"
        android:layout_width="130dp"
        android:layout_height="124dp"
        android:background="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        app:srcCompat="@drawable/rock" />

    <ImageView
        android:id="@+id/ivComputerChoiche"
        android:layout_width="130dp"
        android:layout_height="124dp"
        android:background="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/ivPlayerChoiche"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        app:srcCompat="@drawable/rock" />

    <Button
        android:id="@+id/btChoicheRock"
        android:layout_width="116dp"
        android:layout_height="73dp"
        android:background="@drawable/rock"
        android:backgroundTint="#009688"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btChoichePaper"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Button
        android:id="@+id/btChoichePaper"
        android:layout_width="116dp"
        android:layout_height="73dp"
        android:background="@drawable/paper"
        android:backgroundTint="#009688"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <Button
        android:id="@+id/btChoicheScissors"
        android:layout_width="116dp"
        android:layout_height="73dp"
        android:background="@drawable/scissors"
        android:backgroundTint="#009688"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/btChoichePaper"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.965" />

    <TextView
        android:id="@+id/tvYourChoiche"
        android:layout_width="130dp"
        android:layout_height="21dp"
        android:layout_marginTop="12dp"
        android:text="@string/you"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/tvComputerChoiche"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayerChoiche" />

    <TextView
        android:id="@+id/tvComputerChoiche"
        android:layout_width="130dp"
        android:layout_height="21dp"
        android:layout_marginTop="12dp"
        android:text="@string/computer"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivComputerChoiche" />

    <TextView
        android:id="@+id/tvQuerys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRules" />
</androidx.constraintlayout.widget.ConstraintLayout>